# datum

./: .dockerignore  .gitignore  ARCHITECTURE.md  CAPABILITY.toml  CHANGELOG.md  CHARTER.md  Dockerfile  FLEET-RUNTIME-ROADMAP.md  JOURNAL.md  METHODOLOGY.md  PAPER.md  README.md  SEED.md  SKILLS.md  STATE.md  TRAIL.md  docker-compose.yml  fleet-census-2026-04-13.md  pyproject.toml
.github/: PAT-NOTES.md
.github/workflows/: ci.yml
CONTEXT/: fleet-census-2026-04-13.md  fleet-census-green.json  fleet-dynamics-v2.md  fleet-dynamics.md  flux-ecosystem.md  known-gaps.md  needs-topics-snapshot-2026-04-13.json  repo-relationships.md
PROMPTS/: fleet-audit.md  gap-analysis.md  self-instantiation.md
TOOLS/: audit-scanner.py  batch-license.py  batch-topics.py  mib-bottle.py  topic-mapping.json
datum_runtime/: __init__.py  boot.py  cli.py  fleet_tools.py  keeper_cli.py
datum_runtime/context/: __init__.py  fleet-dynamics.md  known-gaps.md  repo-relationships.md
datum_runtime/prompts/: __init__.py  fleet-audit.md  gap-analysis.md  self-instantiation.md
datum_runtime/superagent/: __init__.py  bus.py  core.py  datum.py  git_agent.py  keeper.py  mib.py  onboard.py  oracle.py  tui.py  workshop.py
datum_runtime/tools/: __init__.py  audit_scanner.py  batch_license.py  batch_topics.py  mib_bottle.py
tests/: test_core.py  test_git_agent.py  test_keeper.py  test_mib.py  test_tools.py
